<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_item1"
        android:title="@string/item1"
        android:icon="@drawable/menu_icon" />

    <item
        android:id="@+id/menu_item2"
        android:title="@string/item2"
        android:icon="@drawable/menu_icon" />

    <item
        android:id="@+id/menu_item3"
        android:title="@string/item3"
        android:icon="@drawable/menu_icon" />

    <item
        android:id="@+id/menu_item4"
        android:title="@string/item4"
        android:icon="@drawable/menu_icon" />

    <item
        android:id="@+id/menu_item5"
        android:title="@string/item5"
        android:icon="@drawable/menu_icon" />

    <item
        android:id="@+id/menu_item6"
        android:title="@string/item6"
        android:icon="@drawable/menu_icon" />

    <item
        android:id="@+id/menu_item7"
        android:title="@string/item7"
        android:icon="@drawable/menu_icon" />

    <item
        android:id="@+id/menu_item8"
        android:title="@string/item8"
        android:icon="@drawable/menu_icon" />

    <item
        android:id="@+id/menu_item9"
        android:title="@string/item9"
        android:icon="@drawable/menu_icon" />

    <item
        android:id="@+id/menu_item10"
        android:title="@string/item10"
        android:icon="@drawable/menu_icon" />

    <item
        android:id="@+id/menu_item11"
        android:title="@string/item11"
        android:icon="@drawable/menu_icon" />

    <item
        android:id="@+id/menu_item12"
        android:title="@string/item12"
        android:icon="@drawable/menu_icon" />

    <item
        android:id="@+id/menu_item13"
        android:title="@string/item13"
        android:icon="@drawable/menu_icon" />

    <item
        android:id="@+id/menu_item14"
        android:title="@string/item14"
        android:icon="@drawable/menu_icon" />

    <item
        android:id="@+id/menu_item15"
        android:title="@string/item15"
        android:icon="@drawable/menu_icon" />

    <item
        android:id="@+id/menu_item16"
        android:title="@string/item16"
        android:icon="@drawable/menu_icon" />

    <item
        android:id="@+id/menu_item17"
        android:title="@string/item17"
        android:icon="@drawable/menu_icon" />

    <item
        android:id="@+id/menu_item18"
        android:title="@string/item18"
        android:icon="@drawable/menu_icon" />

    <item
        android:id="@+id/menu_item19"
        android:title="@string/item19"
        android:icon="@drawable/menu_icon" />


</menu>